refactor(optimization): optimization and cleanup